[package]
name = "tftp-rs"
version = "0.1.0"
authors = ["Carl Hurd <carl@basilisklabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
logging-allocator = "0.1.1"
simple_logger = "1.11.0"
log = { version = "0.4.11", features = ["std"] }